k8s/virus_scanner/virus-scanner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virus-scanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virus-scanner
  template:
    metadata:
      labels:
        app: virus-scanner
    spec:
      containers:
        - name: virus-scanner
          image: giovaz94/mail-pipeline-general
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: virus-scanner-service
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "80"
      prometheus.io/path: "/metrics"   # optional, defaults to /metrics
spec:
  selector:
    app: virus-scanner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: virus-scanner-service
spec:
  host: virus-scanner-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virus-scanner-service
spec:
  hosts:
    - virus-scanner-service
  http:
    - route:
        - destination:
            host: virus-scanner-service
